Fix contrast in goto arrow in computed properties in styles sidepane
Similar to the change here https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/4946330, we need to update the arrow icon here as well

Before:
https://imgur.com/a/H11WbrJ

After:
https://imgur.com/a/WgKlx2m

Bug: 1482704
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6472146
Commit-Queue: Sylvester Elorm Coch <elormcoch@microsoft.com>

--- a/front_end/panels/elements/components/computedStyleTrace.css
+++ b/front_end/panels/elements/components/computedStyleTrace.css
@@ -32,7 +32,7 @@
   height: var(--size);
   margin: -1px 0 0 calc(-1 * var(--size));
   mask: var(--image-file-goto-filled) center / contain no-repeat;
-  background-color: var(--sys-color-surface-variant);
+  background-color: var(--sys-color-primary-bright);
 }
 
 .computed-style-trace:hover .goto {
